syntax = "proto3";
package peers;

message Peer {
  int64 ID = 1;
  string NetAddr = 2;
  string PubKeyHex = 3;
}
