syntax = "proto3";
package poset;

message RootEvent {
  bytes Hash = 1;
  uint64 CreatorID = 2;
  int64 Index = 3;
  int64 LamportTimestamp = 4;
  int64 Round = 5;
}

message Root {
  int64 NextRound = 1;
  RootEvent SelfParent = 2;
  map<string, RootEvent> Others = 3;
}
